# lang-bmb

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.bmb/: session_state_v046.md
.github/workflows/: benchmark.yml  ci.yml  performance-baseline.json
bmb/: Cargo.toml
bmb/examples/: v05_data_types.bmb
bmb/runtime/: bmb_runtime.c
bmb/src/: grammar.lalrpop  lib.rs  main.rs
bmb/src/ast/: expr.rs  mod.rs  output.rs  types.rs
bmb/src/cfg/: mod.rs
bmb/src/codegen/: llvm.rs  llvm_text.rs  mod.rs  wasm_text.rs
bmb/src/error/: mod.rs
bmb/src/index/: mod.rs
bmb/src/interp/: env.rs  error.rs  eval.rs  mod.rs  scope.rs  value.rs
bmb/src/lexer/: token.rs
bmb/src/lsp/: mod.rs
bmb/src/mir/: lower.rs  mod.rs  optimize.rs
bmb/src/parser/: tests.rs
bmb/src/query/: mod.rs
bmb/src/repl/: mod.rs
bmb/src/resolver/: mod.rs
bmb/src/smt/: mod.rs  solver.rs  translator.rs
bmb/src/types/: exhaustiveness.rs  mod.rs
bmb/src/verify/: contract.rs  mod.rs
bootstrap/: README.md  bmb_cli.bmb  bmb_compile.bmb  bmb_unified_cli.bmb  cli_demo.bmb  compiler.bmb  lexer.bmb  llvm_ir.bmb  lowering.bmb  mir.bmb  optimize.bmb  parser.bmb  parser_ast.bmb  parser_test.bmb  pipeline.bmb  selfhost_equiv.bmb  selfhost_test.bmb  types.bmb  utils.bmb
docs/: AI_INTEGRATION.md  API_STABILITY.md  BENCHMARK_COMPARISON.md  BENCHMARK_ROADMAP.md  BETA_CHECKLIST.md  BOOTSTRAP_FEATURE_GAP.md  CONTRACT_ANALYSIS.md  CONTRACT_CHECKLIST.md  GAP_ANALYSIS.md  GOTGAN_DESIGN.md  IMPLEMENTATION_v0.2.md  IMPLEMENTATION_v0.4.md  IMPLEMENTATION_v0.5.md  LAWS.md  PHASE_PLAN_v0.46-v0.47.md  ROADMAP.md  SECURITY_AUDIT.md  SESSION_STATE_2026-01-12.md  SPECIFICATION.md  SPEC_V02_PLAN.md  STAGE3_HARNESS_DESIGN.md  TRANSITION.md  WSL_LLVM_SETUP.md  WSL_VERIFICATION.md
docs/RFC/: RFC-0001-AI-Query-System.md  RFC-0002-Module-Header.md  RFC-0003-Remove-Check.md  RFC-0004-Todo-Keyword.md  RFC-0005-BENCHMARK-PACKAGE-ROADMAP.md  RFC-0006-F64-Type.md  RFC-0007-Dynamic-Collections.md
docs/archive/: BENCHMARK_STRATEGY.md  BOOTSTRAP_ARCHITECTURE.md  GAP_ANALYSIS.md  RELEASE_v0.29.md  ROADMAP_full.md  SPEC_COMPLIANCE.md  STAGE3_HARNESS_DESIGN.md  TRANSITION.md
docs/scenarios/: AI_NATIVE.md  CONTRACTS.md  FROM_RUST.md  PERFORMANCE.md  SYSTEMS.md
examples/: contract_conflict_test.bmb  hello.bmb  trivial_contract_test.bmb
examples/bootstrap_test/: binary.bmb  collatz.bmb  digit_sum.bmb  factorial.bmb  fibonacci.bmb  gcd.bmb  minmax.bmb  power.bmb  prime.bmb  sum.bmb
examples/sample-apps/bmb-calc/: README.md  main.bmb
examples/sample-apps/bmb-compiler/: README.md  main.bmb
examples/sample-apps/bmb-grep/: README.md  main.bmb
examples/sample-apps/bmb-httpd/: README.md  main.bmb
examples/sample-apps/bmb-json-tool/: README.md  main.bmb
runtime/: build_test.ps1  runtime.c  test_add.ll  test_max.ll  validate_llvm_ir.sh
scripts/: bootstrap_3stage.sh  verify_all.sh
stdlib/: README.md
stdlib/array/: mod.bmb
stdlib/core/: bool.bmb  num.bmb  option.bmb  result.bmb
stdlib/io/: mod.bmb
stdlib/parse/: mod.bmb
stdlib/process/: mod.bmb
stdlib/string/: mod.bmb
stdlib/test/: mod.bmb
tests/e2e/: selfcompile_test.bmb
tests/examples/invalid/: err_001_type_mismatch.bmb  (+2 more)
tests/security_phase3/: test_binary_in_source.bmb  test_deep_nesting.bmb  test_deep_recursion.bmb  test_deeply_nested_if.bmb  test_division_by_zero.bmb  test_double_free.bmb  test_extremely_deep_type.bmb  test_generic_explosion.bmb  test_huge_literal.bmb  test_huge_malloc.bmb  test_infinite_recursion.bmb  test_integer_overflow_arithmetic.bmb  test_malformed_escape.bmb  test_many_let_bindings.bmb  test_many_parameters.bmb  test_modulo_by_zero.bmb  test_negative_array_index.bmb  test_null_deref.bmb  test_recursive_type_alias.bmb  test_recursive_type_alias_used.bmb  test_redefine_main.bmb  test_redefine_main2.bmb  test_self_referential_type.bmb  test_shadowing_builtin.bmb  test_smt_complex_contract.bmb  test_unclosed_comment.bmb  test_unclosed_string.bmb  test_use_after_free.bmb  test_very_long_identifier.bmb
tests/stdlib/: test_array.bmb  test_num.bmb  test_option.bmb  test_parse.bmb  test_result.bmb  test_string.bmb
(+84 files in other folders)
