[workspace]
members = ["bmb"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/iyulab/lang-bmb"
description = "BMB - AI-Native programming language with contract-based verification"

[workspace.dependencies]
# Lexer
logos = "0.15"

# Parser
lalrpop-util = { version = "0.22", features = ["lexer"] }
lalrpop = "0.22"

# Error reporting
ariadne = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# REPL
rustyline = "15"

# Utilities
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stacker = "0.1"

# LSP Server
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Code generation (optional - requires LLVM)
# Using git version for LLVM 21 compatibility (PR #628 fix)
inkwell = { git = "https://github.com/TheDan64/inkwell.git", default-features = false }

[profile.release]
lto = true
codegen-units = 1
