[package]
name = "bmb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "bmb"
path = "src/main.rs"

[dependencies]
logos.workspace = true
lalrpop-util.workspace = true
ariadne.workspace = true
clap.workspace = true
rustyline.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
stacker.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
chrono.workspace = true

# Optional LLVM code generation
inkwell = { workspace = true, optional = true, features = ["llvm21-1"] }

[build-dependencies]
lalrpop.workspace = true

[dev-dependencies]
insta = "1"

[features]
default = []
llvm = ["inkwell"]
